--- a/app/templates/placement_test3.html
+++ b/app/templates/placement_test3.html
@@ -13,7 +13,7 @@
 
     <main>
         <div class="container">
-          <h2>Section 1: Pronunciation, Speaking and Conversation</h2>
+          <h2>Section 3: Reading and Writing</h2>
           <div class="test-container">
             <div class="question-container">
               <h3>Questions</h3>
@@ -65,13 +65,13 @@
                 </div>
                 
                 <div class="button-container">
-                  <button id="submit-button" class="submit-button">Next</button>
+                  <button id="submit-button" class="submit-button">Submit</button>
                 </div>
 
                 <div id="alert-dialog" class="hide">
-                  <div id="alert-message">Are you sure you want to go to the next section?</div>
+                  <div id="alert-message">Are you sure you want to go to submit your answers?</div>
                   <div id="alert-buttons">
-                    <button id="alert-ok">Next Section</button>
+                    <button id="alert-ok">Submit Answer</button>
                     <button id="alert-cancel">Cancel</button>
                   </div>
                 </div>
@@ -84,6 +84,6 @@
       
       
     
-    <script src="{{ url_for('static', filename='js/script_placement_test1.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script_placement_test3.js') }}"></script>
   </body>
 </html>
