--- a/app/templates/placement_test2.html
+++ b/app/templates/placement_test2.html
@@ -13,7 +13,7 @@
 
     <main>
         <div class="container">
-          <h2>Section 1: Pronunciation, Speaking and Conversation</h2>
+          <h2>Section 2: Context, Vocabulary, and Grammar</h2>
           <div class="test-container">
             <div class="question-container">
               <h3>Questions</h3>
@@ -84,6 +84,6 @@
       
       
     
-    <script src="{{ url_for('static', filename='js/script_placement_test1.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script_placement_test2.js') }}"></script>
   </body>
 </html>
