--- a/app/templates/learning.html
+++ b/app/templates/learning.html
@@ -20,13 +20,13 @@
         
         <div class="conversation-container">
           <div class="conversation active" id="pronunciation">
-            <div class="message bot">Welcome to Pronunciation, Speaking, and Conversation mode!<br>How can I assist you today?</div>
+            <div class="message bot">Hi {{name}} ({{english_level}})!<br>Welcome to Pronunciation, Speaking, and Conversation mode!<br>How can I assist you today?</div>
           </div>
           <div class="conversation" id="context">
-            <div class="message bot">Welcome to Context, Vocabulary, and Grammar mode!<br>How can I assist you today?</div>
+            <div class="message bot">Hi {{name}} ({{english_level}})!<br>Welcome to Context, Vocabulary, and Grammar mode!<br>How can I assist you today?</div>
           </div>
           <div class="conversation" id="reading">
-            <div class="message bot">Welcome to Reading and Writing mode!<br>How can I assist you today?</div>
+            <div class="message bot">Hi {{name}} ({{english_level}})!<br>Welcome to Reading and Writing mode!<br>How can I assist you today?</div>
           </div>
           <div class="loader-container"></div>
     
@@ -42,7 +42,7 @@
                   <option value="Write a conversation about ...">Write a conversation about ...</option>
                   <option value="Write a conversation between ...">Write a conversation between ...</option>
                   <option value="Let's simulate a interview for">Let's simulate an interview for</option>
-                  <option value="Give me a training">Give me a training</option>
+                  <option value="Let's practice">Let's practice</option>
                   <option value="Give me feedbacks">Give me feedbacks</option>
                 </select>
               </div>
