--- a/app/templates/placement_result.html
+++ b/app/templates/placement_result.html
@@ -15,6 +15,10 @@
         <div class="container">
           <h2>Result: Level and Feedbacks</h2>
           
+          <div id="success-container">
+            <p id="success-message">Result saved successfully!</p>
+          </div>
+          
           <div class="loader-container"></div>
           
           <div class="test-container">
@@ -24,6 +28,7 @@
           </div>
           <div class="button-container">
             <button id="submit-button" class="submit-button">End Test</button>
+            <button id="save-button" class="save-button">Save Result</button>
           </div>
 
           <div id="alert-dialog" class="hide">
