--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,38 +5,56 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style2.css') }}">
     
 </head>
 <body>
 	<header>
-		<h1>Personalized English Learning</h1>
-	</header>
-
-	<div class="container">
-		<div class="card">
-			<h2>Learning</h2>
-			<p>Welcome to Personalized English Learning. We offer a variety of mode and resources to help you improve your English skills.</p>
-			<a href="learning" class="button">Start Learning</a>
+		<div class="navbar">
+		  <ul id="nav-list" class="nav-list">
+			<li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
+			<li class="nav-item"><a href="#" class="nav-link">Profile</a></li>
+			<li class="nav-item"><a href="#" class="nav-link right">About Us</a></li>
+			<li class="nav-item"><a href="#" class="nav-link right">Contact</a></li>
+		  </ul>
+          <button id="logout-button" class="logout-button">Logout</button>
 		</div>
-		<div class="card-container">
+		<h1 id="pel-letter">Personalized English Learning</h1>
+	  </header>
+
+	  <div id="alert-dialog" class="hide">
+		<div id="alert-message">Are you sure you want to log out?</div>
+		<div id="alert-buttons">
+		  <button id="alert-ok">Logout</button>
+		  <button id="alert-cancel">Cancel</button>
+		</div>
+	  </div>
+	  
+	<main>
+		<div class="container">
 			<div class="card">
-				<h2>Placement Test</h2>
-				<p>Determine your current English level with our online placement test.</p>
-				<a href="placement-test">Take Test</a>
+				<h2>Learning</h2>
+				<p>Welcome to Personalized English Learning. We offer a variety of mode and resources to help you improve your English skills.</p>
+				<a href="learning" class="button">Start Learning</a>
 			</div>
-			<div class="card">
-				<h2>Study Plan</h2>
-				<p>Create a personalized study plan based on your level, goals, schedule.</p>
-				<a href="study-plan">Create Plan</a>
+			<div class="card-container">
+				<div class="card">
+					<h2>Placement Test</h2>
+					<p>Determine your current English level with our online placement test.</p>
+					<a href="placement-test">Take Test</a>
+				</div>
+				<div class="card">
+					<h2>Study Plan</h2>
+					<p>Create a personalized study plan based on your level, goals, schedule.</p>
+					<a href="study-plan">Create Plan</a>
+				</div>
 			</div>
 		</div>
-
-	</div>
+	</main>
 
 	<footer>
 		<p>Copyright © 2023 Personalized English Learning</p>
 	  </footer>
-    
 	
 	<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
