--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
 	  <div id="alert-dialog" class="hide">
 		<div id="alert-message">Are you sure you want to log out?</div>
 		<div id="alert-buttons">
-		  <button id="alert-ok">Logout</button>
+		  <button id="alert-ok">Yes</button>
 		  <button id="alert-cancel">Cancel</button>
 		</div>
 	  </div>
