--- a/app/static/css/style_placement_section.css
+++ b/app/static/css/style_placement_section.css
@@ -70,6 +70,17 @@ main {
   margin-bottom: 18px;
 }
 
+h2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h2 span {
+  margin-right: auto;
+}
+
+
 h3 {
   margin-top: 10px;
   margin-left: 10px;
@@ -221,6 +232,41 @@ h3 {
 #alert-buttons button:hover {
   filter: brightness(70%);
 }
+
+
+
+#timesup-container {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-bottom: 10px;
+  text-align: center;
+  background-color: #ff0000bc;
+  color: white;
+  padding: 20px;
+  display: inline-block;
+  border: 1px solid;
+  border-radius: 5px;
+  box-sizing: border-box;
+  z-index: 2;
+}
+
+
+
+#timesup-container h3,
+#timesup-container p {
+  margin: 0;
+  
+}
+
+
+.disable-selection {
+  pointer-events: none;
+}
+
+
 
 
 
