--- a/app/templates/learning.html
+++ b/app/templates/learning.html
@@ -4,6 +4,7 @@
     <title>Learning</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/exit_button.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_learning.css') }}">
   </head>
   
@@ -20,13 +21,16 @@
         
         <div class="conversation-container">
           <div class="conversation active" id="pronunciation">
-            <div class="message bot">Hi {{name}} ({{english_level}})!<br>Welcome to Pronunciation, Speaking, and Conversation mode!<br>How can I assist you today?</div>
+            <div class="message bot">Hi {{name}}! {{english_level}}</div>
+            <div class="message bot">Welcome to Pronunciation, Speaking, and Conversation mode!<br>How can I assist you today?</div>
           </div>
           <div class="conversation" id="context">
-            <div class="message bot">Hi {{name}} ({{english_level}})!<br>Welcome to Context, Vocabulary, and Grammar mode!<br>How can I assist you today?</div>
+            <div class="message bot">Hi {{name}}! {{english_level}}</div>
+            <div class="message bot">Welcome to Context, Vocabulary, and Grammar mode!<br>How can I assist you today?</div>
           </div>
           <div class="conversation" id="reading">
-            <div class="message bot">Hi {{name}} ({{english_level}})!<br>Welcome to Reading and Writing mode!<br>How can I assist you today?</div>
+            <div class="message bot">Hi {{name}}! {{english_level}}</div>
+            <div class="message bot">Welcome to Reading and Writing mode!<br>How can I assist you today?</div>
           </div>
           <div class="loader-container"></div>
     
@@ -36,6 +40,10 @@
                 <select id="message-options-dropdown">
                   <option value="">Select a prompt</option>
                   <option value="Explain who are you and what can you do?">Explain who are you and what can you do?</option>
+                  <option value="Explain my English level and how can I improve it">Explain my English level and how can I improve it</option>
+                  <option value="Recall what I learned last time">Recall what I learned last time</option>
+                  <option value="I want to learn about ...">I want to learn about ...</option>
+                  <option value="Give me lesson about ...">Give me lesson about ...</option>
                   <option value="Let's have a conversation about ...">Let's have a conversation about ...</option>
                   <option value="Let's have a conversation about ... and suggest different vocabularies">Let's have a conversation about ... and suggest different vocabularies</option>
                   <option value="Let's have a conversation about ... and correct my mistakes">Let's have a conversation about ... and correct my mistakes</option>
@@ -52,13 +60,13 @@
             <button type="submit">Send</button>
           </form>
           
-    
+          
           <button id="exit-button" class="exit-button">Exit</button>
-          <div id="alert-dialog" class="hide">
-            <div id="alert-message">Are you sure you want to end learning?</div>
-            <div id="alert-buttons">
-              <button id="alert-ok">End Learning</button>
-              <button id="alert-cancel">Cancel</button>
+          <div id="alert-exit-dialog" class="hide">
+            <div id="alert-exit-message">Are you sure you want to exit?</div>
+            <div id="alert-exit-buttons">
+              <button id="alert-exit-ok">Yes</button>
+              <button id="alert-exit-cancel">Cancel</button>
             </div>
           </div>
           
@@ -68,6 +76,7 @@
     
 
     <script src="{{ url_for('static', filename='js/script_learning.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/exit_button.js') }}"></script>
   
   </body>
 </html>
