--- a/app/templates/placement_result.html
+++ b/app/templates/placement_result.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Placement Test</title>
+    <title>Placement Test: Result</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/exit_button.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_placement_result.css') }}">
     
   </head>
@@ -16,7 +17,7 @@
           <h2>Result: Level and Feedbacks</h2>
           
           <div id="success-container">
-            <p id="success-message">Result saved successfully!</p>
+            <p id="success-message">Result test saved successfully!</p>
           </div>
           
           <div class="loader-container"></div>
@@ -26,23 +27,27 @@
               <div class="loader-container"></div>
             </div>
           </div>
+          
           <div class="button-container">
-            <button id="submit-button" class="submit-button">End Test</button>
-            <button id="save-button" class="save-button">Save Result</button>
+            <button id="save-button" class="save-button">Save Result Test</button>
           </div>
 
-          <div id="alert-dialog" class="hide">
-            <div id="alert-message">Are you sure you want to go to end the placement test?</div>
-            <div id="alert-buttons">
-              <button id="alert-ok">Yes</button>
-              <button id="alert-cancel">Cancel</button>
+          <button id="exit-button" class="exit-button">Exit</button>
+          <div id="alert-exit-dialog" class="hide">
+            <div id="alert-exit-message">Are you sure you want to exit?</div>
+            <div id="alert-exit-buttons">
+              <button id="alert-exit-ok">Yes</button>
+              <button id="alert-exit-cancel">Cancel</button>
             </div>
           </div>
+
         </div>
     </main>
       
       
     
-    <script src="{{ url_for('static', filename='js/script_placement_result.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/script_placement_result.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/exit_button.js') }}"></script>
+    
   </body>
 </html>
