--- a/app/templates/placement_test3.html
+++ b/app/templates/placement_test3.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Placement Test</title>
+    <title>Placement Test: Section 3</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/exit_button.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_placement_section.css') }}">
     
   </head>
@@ -13,7 +14,17 @@
 
     <main>
         <div class="container">
-          <h2>Section 3: Reading and Writing</h2>
+
+          <h2>
+            <span>Section 3: Reading and Writing</span>
+            <div id="timer">10.00</div>
+          </h2>
+
+          <div id="timesup-container" style="display:none">
+            <h3>Time's Up</h3>
+            <p id="">Get the result in <span id="span-countdown">5</span> seconds</p>
+          </div>
+
           <div class="test-container">
             <div class="question-container">
               <h3>Questions</h3>
@@ -77,6 +88,15 @@
                 </div>
 
               </form>
+
+              <button id="exit-button" class="exit-button">Exit</button>
+              <div id="alert-exit-dialog" class="hide">
+                <div id="alert-exit-message">Are you sure you want to exit?</div>
+                <div id="alert-exit-buttons">
+                  <button id="alert-exit-ok">Yes</button>
+                  <button id="alert-exit-cancel">Cancel</button>
+                </div>
+              </div>
               
           </div>
         </div>
@@ -84,6 +104,8 @@
       
       
     
-    <script src="{{ url_for('static', filename='js/script_placement_test3.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/script_placement_test3.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/exit_button.js') }}"></script>
+    
   </body>
 </html>
