--- a/app/templates/placement_result.html
+++ b/app/templates/placement_result.html
@@ -17,7 +17,7 @@
           <h2>Result: Level and Feedbacks</h2>
           
           <div id="success-container">
-            <p id="success-message">Result test saved successfully!</p>
+            <p id="success-message">Success to save result test!</p>
           </div>
           
           <div class="loader-container"></div>
