--- a/app/templates/study_plan.html
+++ b/app/templates/study_plan.html
@@ -14,7 +14,7 @@
     <main>
         <div class="container">
           <div id="success-container">
-            <p id="success-message">Study plan saved successfully!</p>
+            <p id="success-message">Failed to save study plan</p>
           </div>
             
             <form id="study-plan-form">
@@ -111,7 +111,7 @@
       
       
     
-    <script src="{{ url_for('static', filename='js/script_study_plan.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/script_study_plan.js') }}"></script>
     <script src="{{ url_for('static', filename='js/exit_button.js') }}"></script>
 
   </body>
