--- a/app/templates/learning.html
+++ b/app/templates/learning.html
@@ -14,9 +14,9 @@
       <div id="chatbot">
 
         <div class="tabs">
-          <button class="tablink active" onclick="openTab(event, 'pronunciation')" data-mode="pronunciation">Pronunciation, Speaking, and Conversation</button>
-          <button class="tablink" onclick="openTab(event, 'context')" data-mode="context">Context, Vocabulary, and Grammar</button>
-          <button class="tablink" onclick="openTab(event, 'reading')" data-mode="reading">Reading and Writing</button>
+          <button class="tablink active" data-mode="pronunciation">Pronunciation, Speaking, and Conversation</button>
+          <button class="tablink" data-mode="context">Context, Vocabulary, and Grammar</button>
+          <button class="tablink" data-mode="reading">Reading and Writing</button>
         </div>
         
         <div class="conversation-container">
@@ -38,20 +38,6 @@
             <div id="user-input-container">
               <div class="message-options">
                 <select id="message-options-dropdown">
-                  <option value="">Select a prompt</option>
-                  <option value="Explain who are you and what can you do?">Explain who are you and what can you do?</option>
-                  <option value="Explain my English level and how can I improve it">Explain my English level and how can I improve it</option>
-                  <option value="Recall what I learned last time">Recall what I learned last time</option>
-                  <option value="I want to learn about ...">I want to learn about ...</option>
-                  <option value="Give me lesson about ...">Give me lesson about ...</option>
-                  <option value="Let's have a conversation about ...">Let's have a conversation about ...</option>
-                  <option value="Let's have a conversation about ... and suggest different vocabularies">Let's have a conversation about ... and suggest different vocabularies</option>
-                  <option value="Let's have a conversation about ... and correct my mistakes">Let's have a conversation about ... and correct my mistakes</option>
-                  <option value="Write a conversation about ...">Write a conversation about ...</option>
-                  <option value="Write a conversation between ...">Write a conversation between ...</option>
-                  <option value="Let's simulate a interview for">Let's simulate an interview for</option>
-                  <option value="Let's practice">Let's practice</option>
-                  <option value="Give me feedbacks">Give me feedbacks</option>
                 </select>
               </div>
               <textarea name="user_input" id="user-input" placeholder="Type your message here..."></textarea>
@@ -75,7 +61,7 @@
     </main>
     
 
-    <script src="{{ url_for('static', filename='js/script_learning.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/script_learning.js') }}"></script>
     <script src="{{ url_for('static', filename='js/exit_button.js') }}"></script>
   
   </body>
