--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -5,6 +5,7 @@
 
 body {
   margin: 0;
+  margin-top: 120px;
   padding: 0;
   font-size: 16px;
   line-height: 1.5;
@@ -24,10 +25,6 @@ header {
   padding: 20px;
   text-align: center;
   z-index: 9;
-}
-
-main {
-  margin-top: 120px; /* Atur sesuai kebutuhan Anda */
 }
 
 #pel-letter {
@@ -148,6 +145,7 @@ main {
   
 
 footer {
+    margin-top: 40px;
     background: #74AA9C;
     background: -webkit-linear-gradient(to right, #74AA9C, #0e4135);
     background: linear-gradient(to right, #74AA9C, #0e4135);
@@ -157,7 +155,6 @@ footer {
   }
 
 
-/* CSS non-responsif */
 
 /* CSS untuk ukuran layar yang lebih kecil dari 600px */
 @media screen and (max-width: 600px) {
