--- a/app/static/css/style_home.css
+++ b/app/static/css/style_home.css
@@ -1,4 +1,3 @@
-  
   .container {
     max-width: 960px;
     margin: 0 auto;
@@ -97,5 +96,9 @@
     }
   }
   
+
+#home-link {
+    font-weight: bold;
+}
   
 
