--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,12 +2,53 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
-    <script src="{{ url_for('static', filename='js/global.js') }}"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     {% block head %}{% endblock %}
 </head>
-<body>
+<body id="base-body">
+
+    <!-- Header -->
+    <header id="base-header">
+		<div id="base-navbar" class="navbar">
+		  <ul id="base-nav-list" class="nav-list">
+			<li id="base-nav-item" class="nav-item"><a id="home-link" href="/" class="nav-link">Home</a></li>
+			<li id="base-nav-item" class="nav-item"><a id="profile-link" href="/profile" class="nav-link">Profile</a></li>
+			<li id="base-nav-item" class="nav-item"><a id="about-link" href="/about" class="nav-link">About</a></li>
+			<li id="base-nav-item" class="nav-item"><a id="contact-link" href="/contact" class="nav-link">Contact</a></li>
+		  </ul>
+          <button id="logout-button" class="logout-button">Logout</button>
+		</div>
+		<h1 id="pel-letter">
+      Personalized English Learning
+    </h1>
+
+	</header>
+
+    <div id="alert-dialog" class="hide">
+        <div id="alert-message">Are you sure you want to log out?</div>
+        <div id="alert-buttons">
+          <button id="alert-ok">Yes</button>
+          <button id="alert-cancel">Cancel</button>
+        </div>
+    </div>
+
+
     {% block content %}{% endblock %}
-    {% block scripts %}{% endblock %}
+
+      <!-- Footer -->
+    <footer id="base-footer">
+      <p>Copyright ©2023 Intern ChatGPT Team at The Ditjen Diktiristek 
+        <br>
+        MSIB Batch 5, Year 2023
+      </p>
+    </footer>
+
+
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    {% block scripts %} \{% endblock %}
+	
 </body>
 </html>
